--- a/BasicQueuingCashier/BasicQueuingCashier.csproj
+++ b/BasicQueuingCashier/BasicQueuingCashier.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CashierClass.cs" />
+    <Compile Include="CashierWindowQueueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CashierWindowQueueForm.Designer.cs">
+      <DependentUpon>CashierWindowQueueForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CashierWindowQueueForm.resx">
+      <DependentUpon>CashierWindowQueueForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
